[build-system]
requires = ["setuptools"]

[tool.setuptools]
packages = ["broker.py"]

[project]
name = "Broker"
authors = [
    {name = "Nathan Maxwell"}
]
description = "A simple event broker for python."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["python", "pubsub", "event", "broker"]
classifiers = [
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    'importlib-metadata; python_version<"3.10"',
    "pytest",
    "pytest-asyncio"
]
version = "0.1.0"

[project.urls]
Homepage = "https://github.com/nate-maxwell/broker"
Source = "https://github.com/nate-maxwell/broker"
